data/derived/sp14/progs/unify/prog4259.ml.out
Characters 41-50:
  in (h,false),b);;
     ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
